cmake_minimum_required(VERSION 3.10)
project(olxusersdb)
set(CMAKE_THREAD_LIBS_INIT "-lpthread")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pthread ")
add_subdirectory(server)
include_directories("include")
include_directories("server/include")
add_executable(${PROJECT_NAME} main.c olxusersdb.c)
target_link_libraries(${PROJECT_NAME} server)